<resources>
    <string name="app_name">抬头</string>
    <string name="action_settings">Settings</string>
    <string name="good_pos">正:</string>
    <string name="left_pos">左:</string>
    <string name="right_pos">右:</string>
    <string name="down_pos">趴:</string>
    <string name="up_pos">站:</string>
    <string name="toggle_camera_start">开始</string>
    <string name="toggle_camera_stop">停止</string>
    <string name="detect_object">Detect Object</string>
    <string name="title_activity_settings">Settings</string>
    <string name="imagepercent">离开:</string>
    <!-- list 到了最底部 没有新数据了-->
    <string name="save_net_mode">save_net_mode</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_list_titles">
        <item>白峻豪抬头-爸爸严厉版</item>
        <item>小弟抬头-姐姐温柔版</item>
        <item>大宝抬头-妈妈版</item>
        <item>小宝贝抬头-童声版</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>tip</item>
        <item>xiaojie</item>
        <item>dabao</item>
        <item>xiaobao</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_setting">设置</string>
</resources>
