<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.leon.taitou.MainActivity">

    <com.flurgle.camerakit.CameraView xmlns:camerakit="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        camerakit:ckCropOutput="true"
        camerakit:ckFocus="continuous" />

    <ImageView
        android:id="@+id/backimageview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/back" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="300dp"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/Nav_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"></TableRow>

        <TableRow
            android:id="@+id/good_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/goodpos"
                android:layout_weight=".1"
                android:gravity="center|right"
                android:text="@string/good_pos"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/goodpos_prob"
                android:layout_weight="1"
                android:textSize="14sp" />
        </TableRow>


        <TableRow
            android:id="@+id/left_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/leftpos"
                android:layout_weight=".1"
                android:gravity="center|right"
                android:text="@string/left_pos"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/leftpos_prob"
                android:layout_weight="1"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/right_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/rightpos"
                android:layout_weight=".1"
                android:gravity="center|right"
                android:text="@string/right_pos"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rightpos_prob"
                android:layout_weight="1"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/down_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/downpos"
                android:layout_weight=".1"
                android:gravity="center|right"
                android:text="@string/down_pos"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/downpos_prob"
                android:layout_weight="1"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/up_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/uppos"
                android:layout_weight=".1"
                android:gravity="center|right"
                android:text="@string/up_pos"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/uppos_prob"
                android:layout_weight="1"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/imagepercent_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/imagepercent"
                android:layout_weight=".1"
                android:gravity="center|right"
                android:text="@string/imagepercent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/imgpercent_prob"
                android:layout_weight="1"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnToggleCamera"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shape_bg_a_circle_90"
        android:text="@string/toggle_camera_start"
        android:textColor="@color/color_w" />

    <LinearLayout android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageView
            android:id="@+id/camera_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_bg_camera_change" />
        <ImageView
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_settings" />
    </LinearLayout>

</FrameLayout>
